<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/bajarVolumen"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_alignLeft="@+id/subirVolumen"
        android:layout_below="@+id/subirVolumen"
        android:text="@string/bajar_volumen" />

    <Button
        android:id="@+id/subirVolumen"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="67dp"
        android:layout_marginTop="42dp"
        android:text="@string/subir_volumen" />

    <EditText
        android:id="@+id/volumenActual"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignRight="@+id/subirVolumen"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/volumen_defecto"
        android:gravity="center">

    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bajarVolumen"
        android:layout_alignRight="@+id/bajarVolumen"
        android:layout_below="@+id/bajarVolumen"
        android:text="@string/volumen"
        android:gravity="center"/>

     <Button
        android:id="@+id/bajarCanal"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_alignLeft="@+id/subirCanal"
        android:layout_below="@+id/subirCanal"
        android:text="@string/bajar_canal" />

    <EditText
        android:id="@+id/canalActual"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignRight="@+id/subirCanal"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/canal_defecto"
        android:gravity="center">

    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bajarCanal"
        android:layout_alignRight="@+id/bajarCanal"
        android:layout_below="@+id/bajarCanal"
        android:text="@string/canal"
        android:gravity="center"/>

    <Button
        android:id="@+id/subirCanal"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_above="@+id/bajarVolumen"
        android:layout_marginLeft="48dp"
        android:layout_toRightOf="@+id/bajarVolumen"
        android:text="@string/subir_canal" />
    
</RelativeLayout>